# latte-art-robot

./: .gitignore  =2023.10.0  CLAUDE.md  Dockerfile  PIPELINE_GUIDE.md  README.md  index.html  main.py  pyproject.toml  vessl.yaml
configs/policy/: pi0_latte.yaml
configs/robot/: r2d3.yaml
install/: local_setup.sh  setup.sh
install/brain_of_droid/share/brain_of_droid/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dual_rm_65b_description/share/dual_rm_65b_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dual_rm_65b_moveit_config/share/dual_rm_65b_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dual_rm_75b_description/share/dual_rm_75b_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dual_rm_75b_moveit_config/share/dual_rm_75b_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dual_rm_control/lib/dual_rm_control/: dual_rm_control
install/dual_rm_control/share/dual_rm_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dual_rm_gazebo/share/dual_rm_gazebo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dual_rm_install/share/dual_rm_install/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dual_rm_moveit_demo/lib/dual_rm_moveit_demo/: moveit2_fk_demo  moveit2_ik_demo
install/dual_rm_moveit_demo/share/dual_rm_moveit_demo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/joystick_step_control/lib/joystick_step_control/: joystick_step_control_node
install/joystick_step_control/share/joystick_step_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.sh  package.sh
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.sh  package.sh
install/realsense2_description/share/realsense2_description/: local_setup.sh  package.sh
install/rm_camera_demo/lib/rm_camera_demo/: Center_Coordinate_node  camera_0_node  camera_1_node  open_realsense_node  realsense_camera_0_node  realsense_camera_1_node  realsense_camera_2_node  sub_image_node
scripts/: convert_to_lerobot.py  deploy.py  preprocess_z1_to_r2d3.py  realman_recorder.py  record_demos.py  setup_vessl.sh  train.py  train_openpi.py
src/: servo_commands.txt  vr_control_relay.py.bkp
src/brain_of_droid/: setup.cfg  setup.py
src/joystick_step_control/: CMakeLists.txt  keyboard_teleop.py  package.xml
src/joystick_step_control/src/: joystick_step_control_node.cpp
src/rmc_aida_l_ros2-develop/: README.md  README_CN.md
src/rmc_aida_l_ros2-develop/ros2_agv_robot/: CMakeLists.txt
src/rmc_aida_l_ros2-develop/ros2_rm_robot/: README.md
src/rmc_aida_l_ros2-develop/ros2_total_demo/: CMakeLists.txt
src/solo/scripts/: deploy.py
src/teleop/: DataCollectionConstants.py  DataRecoder.py  GRIPPER_CONTROLS.md  Hardware_Bridge.py  Hardware_Bridge_ROS2.py  MetaRecorder.py  camera_stream.py  camera_utils.py  collect_data.py  collect_data_ros2.py  detect_cameras.py  find_camera_serials.sh  generate_meta.py  gripper.py  launch_drivers.py  package.xml  setup.py  show_cameras.py  test_camera_setup.py  test_cameras.py  test_gripper.py  upload_to_hf.py  zed_camera_publisher.py
src/vr_control/: CMakeLists.txt
src/vr_control/config/: google-service2.json
src/vr_control/launch/: joystick.launch.py  vr_launch.py
src/vr_control/src/: head_move.cpp  vr_arm_control.cpp
src/vr_control/vr_control/: arm_actions.py  base_move.py
teleop/: DataCollectionConstants.py  DataRecoder.py  Hardware_Bridge.py  MetaRecorder.py  camera_utils.py  collect_data.py  generate_meta.py  upload_to_hf.py
(+983 files in other folders)
