<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop</name>
  <version>0.0.1</version>
  <description>Teleoperation and data collection for dual arm robot</description>
  <maintainer email="r2d3@todo.todo">r2d3</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rm_ros_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rm_driver</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
